[package]
name = "kvs"
version = "0.1.0"
authors = ["David Dunn <26876072+doubledup@users.noreply.github.com>"]
description = "An in-memory key-value store."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.11", features = ["derive"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[lib]
test = false

[[bin]]
name = "kvs"
test = false
